# backtest

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.js  package.json  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260627000000_init/: migration.sql
apps/api/prisma/migrations/20260627010000_auth_user_management/: migration.sql
apps/api/prisma/migrations/20260628000000_ai_strategy_builder/: migration.sql
apps/api/prisma/migrations/20260628010000_ai_strategy_backtests/: migration.sql
apps/api/src/: app.ts  config.ts  server.ts
apps/api/src/auth/: crypto.ts  hooks.ts  schemas.ts
apps/api/src/plugins/: prisma.ts  redis.ts
apps/api/src/routes/: auth.ts  health.ts  strategies.ts  strategy.ts  users.ts
apps/api/src/strategy/: backtest.ts  mql5.ts  openai.ts  types.ts
apps/api/test/: auth.test.ts  health.test.ts  strategy.test.ts
apps/desktop-bridge/: README.md  bridge.py  requirements.txt  start_bridge.bat  start_bridge.ps1
apps/python-engine/: Dockerfile  pyproject.toml
apps/python-engine/app/: config.py  main.py
apps/python-engine/tests/: test_health.py
apps/web/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  styles.css
apps/web/src/app/: App.tsx  StrategyBuilder.tsx
apps/web/src/lib/: api.ts
apps/web/src/store/: builderStore.ts
apps/web/src/test/: app.test.tsx
apps/web/src/types/: blocks.ts
docs/: application-shell.md  architecture.md
(+11 files in other folders)
