[project]
name = "backtest-ai-python-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "pydantic-settings>=2.4.0", "redis>=5.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0", "ruff>=0.5.0", "black>=24.4.0"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
